# easyllama

./: .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README-ls.md  README.md  auth.json.example  config.basic.yml.example  config.json.example  config.lucebox.yml.example  config.mtp.yml.example  config.spiritbuun.yml.example  config.turboquant.yml.example  config.yaml  config.yml.example  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.githooks/: pre-commit
.github/skills/easyllama-provider/: SKILL.md
.github/skills/easyllama-provider-integration/: SKILL.md
.github/skills/easyllama-provider/scripts/: rebuild-and-warmup.sh  test-public-endpoints.sh  validate-code.sh  validate-config-yaml.sh
.github/skills/easyllama-tune/: SKILL.md
.github/skills/easyllama-tune/assets/: cache-quant-constraint-following.txt  cache-quant-long-context-recall.txt  cache-quant-prompt-pack.md  cache-quant-structured-output.txt  cache-quant-style-consistency.txt
.github/skills/easyllama-tune/scripts/: common.sh  compare-chat-samples.sh  list-supported-cache-types.sh  probe-chat.sh  search-max-gpu-layers.sh  set-chat-tuning.sh  snapshot-chat-sample.sh
chat_template/: README.md  qwen3.5.jinja  qwen3.6.jinja
config/: config.basic.yml.example  config.lucebox.yml.example  config.mtp.yml.example  config.spiritbuun.yml.example  config.turboquant.yml.example
easyllama/: __init__.py  cli.py  config.py  helpers.py  logger.py  main.py  runtime.py
easyllama/servers/: __init__.py  basic.py  common.py  lucebox.py  server_base.py  spiritbuun.py
