[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easyllama"
version = "0.3.1"
description = "Mode-aware local llama.cpp runner with llama-swap, turboquant, Spiritbuun, and Luce support"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
easyllama = "easyllama.main:main"

[tool.setuptools.packages.find]
include = ["easyllama", "easyllama.*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.easyllama.defaults]
image_name_base = "llamacpp-local"
image_tag_base = "cuda13"
container_name = "llamacpp-server-swap"
host_port = 8080
container_port = 8080
models_dir = "models"
mmproj_dir = "mmproj"
chat_template_dir = "chat_template"
auth_file = "auth.json"
auth_example_file = "auth.json.example"
llama_cpp_repo = "https://github.com/Luce-Org/llama.cpp.git"
llama_cpp_ref = "luce-dflash"
turboquant_llama_cpp_repo = "https://github.com/TheTom/llama-cpp-turboquant.git"
turboquant_llama_cpp_ref = "feature/turboquant-kv-cache"
spiritbuun_llama_cpp_repo = "https://github.com/spiritbuun/buun-llama-cpp.git"
spiritbuun_llama_cpp_ref = "master"
lucebox_hub_repo = "https://github.com/Luce-Org/lucebox-hub.git"
lucebox_hub_ref = "main"
cuda_default_architectures = "120"
log_level = "debug"

[tool.easyllama.configs]
basic = "config.basic.yml"
basic_example = "config.basic.yml.example"
turboquant = "config.turboquant.yml"
turboquant_example = "config.turboquant.yml.example"
spiritbuun = "config.spiritbuun.yml"
spiritbuun_example = "config.spiritbuun.yml.example"
lucebox = "config.lucebox.yml"
lucebox_example = "config.lucebox.yml.example"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["easyllama"]
extend-exclude = [
	".runtime",
	".venv",
	"chat_template",
	"mmproj",
	"models",
]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RET", "RUF", "SIM", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true